additional exploits